# temporal-micro-consensus

./: .gitignore  CITATION.cff  LICENCE  LICENSE-CC-BY-NC-SA-4.0  LICENSE-CC-BY-SA-4.0  LICENSE-MIT  README.md  _config.yml  index.md
_layouts/: default.html
assets/: LICENCE  SOURCE.md  tokens.css
coastlines/: consensus-emergence-v0.1.md  consensus-emergence-v0.2.md  consensus-emergence-v0.3.md  consensus-emergence-v0.4.md
docs/: harbour-view-structural-deliberation-note-v0.6.md  harbour-view-task-card-HV-DRAFT-001.md  literature-review-plan.md  logbook.md  roadmap.md  tutorial.md  view-framework-overview-v0.1-bibliography-draft.md  view-framework-overview-v0.1-pilot-reader-brief.md  view-framework-overview-v0.1-toc-outline.md
ledger/: CL-2026-006-sorci-v0.1.md  CL-2026-006-sorci-v0.2.md  CL-2026-006-sorci-v0.3.md  (+9 more)
numerics/: README.md  pyproject.toml  requirements.txt
numerics/examples/: README.md  open_instrument_module.ipynb  sorci_module.ipynb
numerics/results/: README.md  open_instrument_redundancy_v0.1.json  sorci_nuisance_budget_v0.1.json
numerics/src/tmc_numerics/: __init__.py  channels.py  exceptions.py  layout.py  operators.py  prep.py  system.py
numerics/src/tmc_numerics/anchors/: __init__.py  ensemble.py  info.py  redundancy.py
numerics/src/tmc_numerics/modules/: __init__.py  open_instrument.py  sorci.py
numerics/tests/: test_channels.py  test_cross_anchor.py  test_d5_redundancy.py  test_evolve.py  test_firewall.py  test_layout.py  test_measures.py  test_open_instrument.py  test_operators.py  test_prep.py  test_smoke.py  test_sorci.py
(+51 files in other folders)
